@@ -39,20 +39,14 @@ weapon_produce_rate: 100
 // Prepare Potion success rate. (Note 2)
 potion_produce_rate: 100
 
-// Do produced items have the maker's name on them? (Note 1)
-produce_item_name_input: yes
-
-// Do produced potions have the maker's name on them? (Note 1)
-produce_potion_name_input: yes
-
-// Do crafted arrows have the maker's name on them? (Note 1)
-making_arrow_name_input: no
-
-// Do created holy waters have the maker's name on it? (Note 1)
-holywater_name_input: no
-
-// Do created poison bottles have the maker's name on it? (Note 1)
-cdp_name_input: no
+// Do produced items have the maker's name on them? (Note 4)
+// 0x01: Produced Weapons
+// 0x02: Produced Potions
+// 0x04: Produced Arrows
+// 0x08: Produced Holy Water
+// 0x10: Produced Deadly Potions
+// 0x80: Other produced items.
+produce_item_name_input: 0x03
 
 // Is a monster summoned via dead branch aggressive? (Note 1)
 dead_branch_active: yes
