@@ -254,10 +254,6 @@ extern struct Battle_Config {
 	unsigned short party_skill_penalty;
 	unsigned short monster_class_change_full_recover;
 	unsigned short produce_item_name_input;
-	unsigned short produce_potion_name_input;
-	unsigned short making_arrow_name_input;
-	unsigned short holywater_name_input;
-	unsigned short cdp_name_input;
 	unsigned short display_skill_fail;
 	unsigned short chat_warpportal;
 	unsigned short mob_warp;
